...
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/textview_enrolled_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_text_size"
        android:visibility="gone"
...
        android:layout_below="@id/schedule_label"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        android:layout_below="@id/linearlayout_schedule"
...
