<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearlayout_schedule_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    android:padding="8dp"
    android:background="@drawable/shape_border_bottom">

    <TextView
        android:id="@+id/textview_schedule_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Generic talk name"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textview_schedule_presenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Presenter: Mauro @ LOCAWEB, Lucia @ WEBPAPPER"
        android:textSize="10dp"/>

</LinearLayout>